@@ -1,5 +1,6 @@
 package keeper.project.homepage.controller.sign;
 
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
 import static org.springframework.restdocs.mockmvc.MockMvcRestDocumentation.document;
 import static org.springframework.restdocs.mockmvc.MockMvcRestDocumentation.documentationConfiguration;
 import static org.springframework.restdocs.mockmvc.RestDocumentationRequestBuilders.post;
@@ -9,27 +10,35 @@ import static org.springframework.restdocs.payload.PayloadDocumentation.fieldWit
 import static org.springframework.restdocs.payload.PayloadDocumentation.responseFields;
 import static org.springframework.restdocs.request.RequestDocumentation.parameterWithName;
 import static org.springframework.restdocs.request.RequestDocumentation.requestParameters;
+import static org.springframework.security.test.web.servlet.setup.SecurityMockMvcConfigurers.springSecurity;
 import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 import java.text.SimpleDateFormat;
-import java.util.Collections;
+import java.util.ArrayList;
 import java.util.Date;
-import keeper.project.homepage.entity.MemberEntity;
-import keeper.project.homepage.repository.MemberRepository;
+import java.util.List;
+import keeper.project.homepage.entity.member.MemberEntity;
+import keeper.project.homepage.exception.CustomMemberNotFoundException;
+import keeper.project.homepage.repository.member.MemberRepository;
+import lombok.extern.log4j.Log4j2;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.json.JacksonJsonParser;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.context.MessageSource;
+import org.springframework.context.i18n.LocaleContextHolder;
 import org.springframework.restdocs.RestDocumentationContextProvider;
 import org.springframework.restdocs.RestDocumentationExtension;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.test.web.servlet.MockMvc;
+import org.springframework.test.web.servlet.MvcResult;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.LinkedMultiValueMap;
@@ -41,6 +50,7 @@ import org.springframework.web.filter.CharacterEncodingFilter;
 @SpringBootTest
 @AutoConfigureMockMvc
 @Transactional
+@Log4j2
 public class SignInControllerTest {
 
   @Autowired
@@ -55,40 +65,34 @@ public class SignInControllerTest {
   @Autowired
   private WebApplicationContext ctx;
 
-  final private String loginId = "hyeonmomo";
-  final private String emailAddress = "gusah@naver.com";
-  final private String password = "keeper";
-  final private String realName = "JeongHyeonMo";
-  final private String nickName = "HyeonMoJeong";
-  final private String birthday = "19980101";
-  final private String studentId = "201724579";
+  @Autowired
+  private MessageSource messageSource;
+
+  private final String loginId = "hyeonmomo";
+  private final String emailAddress = "gusah@naver.com";
+  private final String password = "keeper";
+  private final String realName = "JeongHyeonMo";
+  private final String nickName = "HyeonMoJeong";
+  private final String birthday = "19980101";
+  private final String studentId = "201724579";
 
   @BeforeEach
   public void setUp(RestDocumentationContextProvider restDocumentation) throws Exception {
     // mockMvc의 한글 사용을 위한 코드
     this.mockMvc = MockMvcBuilders.webAppContextSetup(ctx)
         .addFilters(new CharacterEncodingFilter("UTF-8", true))  // 필터 추가
-        .apply(documentationConfiguration(restDocumentation)
-            .operationPreprocessors()
-            .withRequestDefaults(modifyUris().host("test.com").removePort(), prettyPrint())
-            .withResponseDefaults(prettyPrint())
-        )
-        .build();
+        .apply(springSecurity()).apply(
+            documentationConfiguration(restDocumentation).operationPreprocessors()
+                .withRequestDefaults(modifyUris().host("test.com").removePort(), prettyPrint())
+                .withResponseDefaults(prettyPrint())).build();
 
     SimpleDateFormat stringToDate = new SimpleDateFormat("yyyymmdd");
     Date birthdayDate = stringToDate.parse(birthday);
 
-    memberRepository.save(
-        MemberEntity.builder()
-            .loginId(loginId)
-            .emailAddress(emailAddress)
-            .password(passwordEncoder.encode(password))
-            .realName(realName)
-            .nickName(nickName)
-            .birthday(birthdayDate)
-            .studentId(studentId)
-            .roles(Collections.singletonList("ROLE_USER"))
-            .build());
+    memberRepository.save(MemberEntity.builder().loginId(loginId).emailAddress(emailAddress)
+        .password(passwordEncoder.encode(password)).realName(realName).nickName(nickName)
+        .birthday(birthdayDate).studentId(studentId)
+        .roles(new ArrayList<String>(List.of("ROLE_USER"))).build());
   }
 
   @Test
@@ -97,25 +101,16 @@ public class SignInControllerTest {
     MultiValueMap<String, String> params = new LinkedMultiValueMap<>();
     params.add("loginId", loginId);
     params.add("password", password);
-    mockMvc.perform(post("/v1/signin").params(params))
-        .andDo(print())
-        .andExpect(status().isOk())
-        .andExpect(jsonPath("$.success").value(true))
-        .andExpect(jsonPath("$.code").value(0))
-        .andExpect(jsonPath("$.msg").exists())
-        .andExpect(jsonPath("$.data").exists())
-        .andExpect(status().isOk())
-        .andDo(document("sign-in",
-            requestParameters(
-                parameterWithName("loginId").description("로그인 아이디"),
-                parameterWithName("password").description("로그인 비밀번호")
-            ),
-            responseFields(
-                fieldWithPath("success").description("로그인 실패 시 false 값을 보냅니다."),
+    mockMvc.perform(post("/v1/signin").params(params)).andDo(print()).andExpect(status().isOk())
+        .andExpect(jsonPath("$.success").value(true)).andExpect(jsonPath("$.code").value(0))
+        .andExpect(jsonPath("$.msg").exists()).andExpect(jsonPath("$.data").exists())
+        .andExpect(status().isOk()).andDo(document("sign-in",
+            requestParameters(parameterWithName("loginId").description("로그인 아이디"),
+                parameterWithName("password").description("로그인 비밀번호")),
+            responseFields(fieldWithPath("success").description("로그인 실패 시 false 값을 보냅니다."),
                 fieldWithPath("code").description("로그인 실패 시 -1001 코드를 보냅니다."),
                 fieldWithPath("msg").description("상태 메시지를 보냅니다."),
-                fieldWithPath("data").description("로그인 성공 시 JWT 토큰을 담아서 보냅니다.").optional()
-            )));
+                fieldWithPath("data").description("로그인 성공 시 JWT 토큰을 담아서 보냅니다.").optional())));
   }
 
   @Test
@@ -124,12 +119,75 @@ public class SignInControllerTest {
     MultiValueMap<String, String> params = new LinkedMultiValueMap<>();
     params.add("loginId", loginId);
     params.add("password", password + "1");
-    mockMvc.perform(post("/v1/signin").params(params))
-        .andDo(print())
-        .andExpect(status().is5xxServerError())
+    mockMvc.perform(post("/v1/signin").params(params)).andDo(print())
+        .andExpect(status().is5xxServerError()).andExpect(jsonPath("$.success").value(false))
+        .andExpect(jsonPath("$.code").value(-1001)).andExpect(jsonPath("$.msg").exists());
+  }
+
+  @Test
+  @DisplayName("비밀번호 변경 성공")
+  @Transactional
+  public void passwordChangeSuccess() throws Exception {
+    /* ==== 로그인 후 토큰 생성 Start ==== */
+    MultiValueMap<String, String> signInParams = new LinkedMultiValueMap<>();
+    signInParams.add("loginId", loginId);
+    signInParams.add("password", password);
+    MvcResult result = mockMvc.perform(post("/v1/signin").params(signInParams)).andDo(print())
+        .andExpect(status().isOk()).andExpect(jsonPath("$.success").value(true))
+        .andExpect(jsonPath("$.code").value(0)).andExpect(jsonPath("$.msg").exists())
+        .andExpect(jsonPath("$.data").exists()).andReturn();
+
+    String resultString = result.getResponse().getContentAsString();
+    JacksonJsonParser jsonParser = new JacksonJsonParser();
+    String userToken = jsonParser.parseMap(resultString).get("data").toString();
+    /* ==== 로그인 후 토큰 생성 End ==== */
+
+    MemberEntity PrevMemberEntity = memberRepository.findByLoginId(loginId)
+        .orElseThrow(CustomMemberNotFoundException::new);
+    String prevHashedPassword = PrevMemberEntity.getPassword();
+
+    String newPassword = password + "1";
+    MultiValueMap<String, String> changePasswordParams = new LinkedMultiValueMap<>();
+    changePasswordParams.add("newPassword", newPassword);
+    mockMvc.perform(post("/v1/signin/change-password").header("Authorization", userToken)
+            .params(changePasswordParams)).andDo(print()).andExpect(status().isOk())
+        .andExpect(jsonPath("$.success").value(true))
+        .andExpect(jsonPath("$.code").value(0))
+        .andExpect(jsonPath("$.msg").exists());
+
+    MemberEntity memberEntity = memberRepository.findByLoginId(loginId)
+        .orElseThrow(CustomMemberNotFoundException::new);
+    String newHashedPassword = memberEntity.getPassword();
+    // 비밀번호 변경 전 해쉬값과 변경 후 해쉬값이 다르면 테스트 성공.
+    assertNotEquals(prevHashedPassword, newHashedPassword);
+  }
+
+  @Test
+  @DisplayName("잘못된 토큰 비밀번호 변경 실패")
+  public void passwordChangeFailed() throws Exception {
+    /* ==== 로그인 후 토큰 생성 Start ==== */
+    MultiValueMap<String, String> signInParams = new LinkedMultiValueMap<>();
+    signInParams.add("loginId", loginId);
+    signInParams.add("password", password);
+    MvcResult result = mockMvc.perform(post("/v1/signin").params(signInParams)).andDo(print())
+        .andExpect(status().isOk()).andExpect(jsonPath("$.success").value(true))
+        .andExpect(jsonPath("$.code").value(0)).andExpect(jsonPath("$.msg").exists())
+        .andExpect(jsonPath("$.data").exists()).andReturn();
+
+    String resultString = result.getResponse().getContentAsString();
+    JacksonJsonParser jsonParser = new JacksonJsonParser();
+    String userToken = jsonParser.parseMap(resultString).get("data").toString();
+    /* ==== 로그인 후 토큰 생성 End ==== */
+
+    String signInFailedCode = messageSource.getMessage("SigninFailed.code", null,
+        LocaleContextHolder.getLocale());
+
+    MultiValueMap<String, String> changePasswordParams = new LinkedMultiValueMap<>();
+    changePasswordParams.add("newPassword", password + "1");
+    mockMvc.perform(post("/v1/signin/change-password").header("Authorization", userToken + "1")
+            .params(changePasswordParams)).andDo(print()).andExpect(status().is5xxServerError())
         .andExpect(jsonPath("$.success").value(false))
-        .andExpect(jsonPath("$.code").value(-1001))
-        .andExpect(jsonPath("$.msg").exists())
-    ;
+        .andExpect(jsonPath("$.code").value(signInFailedCode))
+        .andExpect(jsonPath("$.msg").exists());
   }
 }
